--- a/azure-pipelines.docker.yml
+++ b/azure-pipelines.docker.yml
@@ -9,6 +9,10 @@ pool:
 variables:
   imageName: 'nodejscloud'
 
-steps:
-- script: docker build -f Dockerfile -t $(imageName) .
-  displayName: 'docker build'
+- script: |
+    docker build -f Dockerfile -t $(dockerId)/$(imageName) .
+    docker login -u $(dockerId) -p $pswd
+    docker push $(dockerId)/$(imageName)
+  env:
+    pswd: $(dockerPassword)
+  displayName: 'Build and push Docker image'
