--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,22 @@
-version: 3
+version: '3'
 services:
-
   server:
     build: ./server
-
-    image: pmanlukas/nodejscloud:latest
-    container_name: nodecloud
+    image: HUB_ID/cloudcomputinggroup#:latest
+    container_name: cloudcomputinggroup#
     depends_on:
       - "mongodb"
-    enviroment:
+    environment:
       - MONGODB_URI=mongodb://mongodb:27017/booksData
     ports:
       - "3000:3000"
-  
+    restart: always
   mongodb:
     image: mongo:latest
     container_name: "mongodb"
-    enviroment:
+    environment:
       - MONGO_DATA_DIR=/data/db
     volumes:
       - ./data/:/data/db
     ports:
-      - "27017:27017"
-    
+        - "27017:27017"
