--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3'
 services:
   server:
     build: ./server
-    image: HUB_ID/cloudcomputinggroup#:latest
-    container_name: cloudcomputinggroup#
+    image: pmanlukas/nodejscloud:latest
+    container_name: nodejscloud
     depends_on:
       - "mongodb"
     environment:
